--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,11 @@
 
 # Build results
 
-#[Dd]ebug/
-#[Rr]elease/
+[Dd]ebug/
+[Rr]elease/
 x64/
 build/
-#[Bb]in/
+[Bb]in/
 [Oo]bj/
 
 # Enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
@@ -154,5 +154,3 @@ $RECYCLE.BIN/
 
 # Mac desktop service store files
 .DS_Store
-
-Service References/
