--- a/Invoice Run/packages.config
+++ b/Invoice Run/packages.config
@@ -5,4 +5,5 @@
   <package id="Microsoft.Data.Services.Client" version="5.6.0" targetFramework="net45" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net45" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net45" />
+  <package id="TimePeriodLibrary.NET" version="2.1.1" targetFramework="net40" />
 </packages>
